# logicRegression

./: .gitignore  CMakeLists.txt  README.md  logictree.h  main.c  main.h
include/: helpers.h  logictree.h  main.h  model.h  optimizer.h
src/: helpers.c  logictree.c  main.c  model.c  optimizer.c  test.c
